refactored openfaas analysis a bit

--- a/Architectural Reconstruction Deployment.ipynb
+++ b/Architectural Reconstruction Deployment.ipynb
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1355,
+   "execution_count": 1408,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1356,
+   "execution_count": 1409,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +659,6 @@
     "                if k in line:\n",
     "                    print(\"Replacing\", \"os.getenv(\\\"\" + k + \"\\\")\", \"with\", v)\n",
     "                    line = line.replace(\"os.getenv(\\\"\" + k + \"\\\")\", v, 1)\n",
-    "                    print(\"New line:\", line)\n",
     "                \n",
     "            all_vars.append(line)\n",
     "        except:\n",
@@ -724,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1384,
+   "execution_count": 1410,
    "metadata": {
     "scrolled": false
    },
@@ -734,79 +733,71 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "IOT-Grafana-user-creator\n",
+      "Analysing IOT-Grafana-user-creator...\n",
+      "\n",
       "Parsing code/iot-grafana-user-creator/iot-assignment2.yml for environment variables...\n",
       "Environment variables: [('gateway', 'https://gateway.christoffernissen.me'), ('host', 'ec2-34-226-215-115.compute-1.amazonaws.com:3000')]\n",
       "Parsing code/iot-grafana-user-creator/handler.py and replacing variables...\n",
       "Replacing os.getenv(\"host\") with ec2-34-226-215-115.compute-1.amazonaws.com:3000\n",
-      "New line: HOST = ec2-34-226-215-115.compute-1.amazonaws.com:3000\n",
-      "\n",
-      "HOST ec2-34-226-215-115.compute-1.amazonaws.com\n",
-      "URL_USERS 'http://admin:smartmeter@' + HOST + '/api/admin/users'\n",
-      "URL_DASHBOARD 'http://' + HOST + '/api/dashboards/db'\n",
-      "URL_DASHBOARD_PERMISSIONS 'http://' + HOST + '/api/dashboards/id/%s/permissions'\n",
-      "URL_CUSTOMERS_TEAM_MEMBERS 'http://' + HOST + '/api/teams/10/members'\n",
+      "    > HOST ec2-34-226-215-115.compute-1.amazonaws.com:3000\n",
+      "    > URL_USERS 'http://admin:smartmeter@' + HOST + '/api/admin/users'\n",
+      "    > URL_DASHBOARD 'http://' + HOST + '/api/dashboards/db'\n",
+      "    > URL_DASHBOARD_PERMISSIONS 'http://' + HOST + '/api/dashboards/id/%s/permissions'\n",
+      "    > URL_CUSTOMERS_TEAM_MEMBERS 'http://' + HOST + '/api/teams/10/members'\n",
       "\n",
       "Found 5 external services\n",
-      "Changed 4 values \n",
+      "Replacing HOST with ec2-34-226-215-115.compute-1.amazonaws.com:3000\n",
+      "Replacing HOST with ec2-34-226-215-115.compute-1.amazonaws.com:3000\n",
+      "Replacing HOST with ec2-34-226-215-115.compute-1.amazonaws.com:3000\n",
+      "Replacing HOST with ec2-34-226-215-115.compute-1.amazonaws.com:3000\n",
+      "Changed 4 values by substitution \n",
       "\n",
-      "Results:\n",
-      "URL_USERS http://admin:smartmeter@ec2-34-226-215-115.compute-1.amazonaws.com/api/admin/users\n",
-      "URL_DASHBOARD http://ec2-34-226-215-115.compute-1.amazonaws.com/api/dashboards/db\n",
-      "URL_DASHBOARD_PERMISSIONS http://ec2-34-226-215-115.compute-1.amazonaws.com/api/dashboards/id/%s/permissions\n",
-      "URL_CUSTOMERS_TEAM_MEMBERS http://ec2-34-226-215-115.compute-1.amazonaws.com/api/teams/10/members\n",
-      "HOST ec2-34-226-215-115.compute-1.amazonaws.com\n",
+      "Results for IOT-Grafana-user-creator:\n",
+      "   URL_USERS: http://admin:smartmeter@ec2-34-226-215-115.compute-1.amazonaws.com:3000/api/admin/users\n",
+      "   URL_DASHBOARD: http://ec2-34-226-215-115.compute-1.amazonaws.com:3000/api/dashboards/db\n",
+      "   URL_DASHBOARD_PERMISSIONS: http://ec2-34-226-215-115.compute-1.amazonaws.com:3000/api/dashboards/id/%s/permissions\n",
+      "   URL_CUSTOMERS_TEAM_MEMBERS: http://ec2-34-226-215-115.compute-1.amazonaws.com:3000/api/teams/10/members\n",
+      "   HOST: ec2-34-226-215-115.compute-1.amazonaws.com:3000\n",
       "\n",
       "\n",
-      "IOT-influxdb-savedata\n",
+      "\n",
+      "\n",
+      "Analyzing IOT-InfluxDB-SaveData...\n",
+      "\n",
       "Parsing code/iot-influxdb-savedata/iot-assignment2.yml for environment variables...\n",
       "Environment variables: [('gateway', 'https://gateway.christoffernissen.me'), ('influx_host', 'https://ec2-34-226-215-115.compute-1.amazonaws.com'), ('influx_port', '8086'), ('influx_db', 'smart_meter_cluster')]\n",
       "Parsing code/iot-influxdb-savedata/handler.py and replacing variables...\n",
       "Replacing os.getenv(\"influx_host\") with https://ec2-34-226-215-115.compute-1.amazonaws.com\n",
-      "New line: INFLUXDB_ADDRESS = https://ec2-34-226-215-115.compute-1.amazonaws.com\n",
-      "\n",
       "Replacing os.getenv(\"influx_port\") with 8086\n",
-      "New line: INFLUXDB_PORT = 8086\n",
-      "\n",
       "Replacing os.getenv(\"influx_db\") with smart_meter_cluster\n",
-      "New line: INFLUXDB_DATABASE = smart_meter_cluster\n",
-      "\n",
-      "INFLUXDB_ADDRESS https://ec2-34-226-215-115.compute-1.amazonaws.com\n",
+      "    > INFLUXDB_ADDRESS https://ec2-34-226-215-115.compute-1.amazonaws.com\n",
       "\n",
       "Found 1 external services\n",
-      "Changed 0 values \n",
+      "Changed 0 values by substitution \n",
+      "\n",
+      "Results for IOT-InfluxDB-SaveData:\n",
+      "   INFLUXDB_ADDRESS: https://ec2-34-226-215-115.compute-1.amazonaws.com\n",
+      "\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 2, got 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1384-f58dfa0392e0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     86\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"IOT-influxdb-savedata\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 88\u001b[0;31m \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0manalyse_external_services\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'iot-influxdb-savedata/iot-assignment2.yml'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'iot-influxdb-savedata/handler.py'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     89\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Results:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-1384-f58dfa0392e0>\u001b[0m in \u001b[0;36manalyse_external_services\u001b[0;34m(yml, handler)\u001b[0m\n\u001b[1;32m     66\u001b[0m     \u001b[0mchanged\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minterpret_service_strings\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mservices\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 68\u001b[0;31m     \u001b[0mlist1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mchanged\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     69\u001b[0m     \u001b[0;32mfor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mservices\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 0)"
      ]
     }
    ],
    "source": [
     "def extract_urls_from_line(line):\n",
     "    # filter initial source code lines so only one with variables remains\n",
-    "    x = re.search(\"(https?:\\/\\/(.)*)\", line)\n",
+    "    matching = re.search(\"(https?:\\/\\/(.)*)\", line)\n",
     "    \n",
-    "    if x != None or 'ec2' in line: \n",
+    "    if matching != None or 'ec2' in line: # not https?:// format, or contains ec2 for aws\n",
     "        var_name = line.split(\"=\")[0].strip()\n",
     "        var_dec = line.split(\"=\")[1].strip()\n",
     "        \n",
-    "        # refine if not composite\n",
-    "        if '+' not in line: # composit variable\n",
-    "            y = re.search(\"((https?:\\/\\/)?[-\\w.]*(\\.\\w{2,3}))\", line)\n",
+    "        # refine if not composite variable\n",
+    "        if '+' not in line: \n",
+    "            y = re.search(\"((https?:\\/\\/)?[-\\w.]*(\\.\\w{2,3}(:?[\\d]{2,6})?))\", line)\n",
     "            if y.group(1) != None: \n",
     "                var_dec = y.group(1)\n",
     "\n",
-    "        print(var_name, var_dec)\n",
+    "        print(\"    >\", var_name, var_dec)\n",
     "\n",
     "    return (var_name, var_dec)\n",
     "\n",
@@ -832,14 +823,13 @@
     "        try:\n",
     "            for (k, v) in env_vars:\n",
     "                if k in line[1]:\n",
-    "                    #print(\"Replacing\", k, \"with\", v)\n",
+    "                    print(\"Replacing\", k, \"with\", v)\n",
     "                    # clean up string\n",
     "                    tmp = line[1].replace(k, v, 1)\n",
     "                    tmp = tmp.strip().replace(\"'\", \"\")\n",
     "                    tmp = tmp.replace(\"+\", \"\")\n",
     "                    res = tmp.replace(\" \", \"\")\n",
-    "                    \n",
-    "                    #print(res)\n",
+    "\n",
     "            \n",
     "            # only modified values\n",
     "            interpreted.append((line[0], res))\n",
@@ -847,7 +837,7 @@
     "        except:\n",
     "            continue\n",
     "            \n",
-    "    print(\"Changed\", len(interpreted), \"values\", \"\\n\")\n",
+    "    print(\"Changed\", len(interpreted), \"values by substitution\", \"\\n\")\n",
     "    return interpreted\n",
     "\n",
     "\n",
@@ -859,6 +849,7 @@
     "    \n",
     "    changed = interpret_service_strings(services)\n",
     "\n",
+    "    # combine lists to one, or return env if no changes\n",
     "    if len(changed) > 0:\n",
     "        list1, list2 = zip(*changed)\n",
     "        for(k,v) in services:\n",
@@ -869,24 +860,26 @@
     "        return changed\n",
     "\n",
     "    else: \n",
-    "        return \n",
+    "        return services\n",
     "\n",
     "\n",
     "print()\n",
-    "print(\"IOT-Grafana-user-creator\")\n",
-    "res = analyse_external_services('iot-grafana-user-creator/iot-assignment2.yml', 'iot-grafana-user-creator/handler.py')\n",
-    "print(\"Results:\")\n",
-    "for (k,v) in res:\n",
-    "    print(k, v)\n",
+    "print(\"Analysing IOT-Grafana-user-creator...\\n\")\n",
+    "external_dependencies_grafana = analyse_external_services('iot-grafana-user-creator/iot-assignment2.yml', 'iot-grafana-user-creator/handler.py')\n",
+    "print(\"Results for IOT-Grafana-user-creator:\")\n",
+    "for (k,v) in external_dependencies_grafana:\n",
+    "    print(\"  \", k+\":\", v)\n",
     "\n",
     "print()\n",
     "print()\n",
+    "print()\n",
+    "print()\n",
     "\n",
-    "print(\"IOT-influxdb-savedata\")\n",
-    "res = analyse_external_services('iot-influxdb-savedata/iot-assignment2.yml', 'iot-influxdb-savedata/handler.py')\n",
-    "print(\"Results:\")\n",
-    "for (k,v) in res:\n",
-    "    print(k, v)\n",
+    "print(\"Analyzing IOT-InfluxDB-SaveData...\\n\")\n",
+    "external_dependencies_influx = analyse_external_services('iot-influxdb-savedata/iot-assignment2.yml', 'iot-influxdb-savedata/handler.py')\n",
+    "print(\"Results for IOT-InfluxDB-SaveData:\")\n",
+    "for (k,v) in external_dependencies_influx:\n",
+    "    print(\"  \", k+\":\", v)\n",
     "\n",
     "print()\n",
     "print()\n"
@@ -910,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1390,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,8 +912,6 @@
     "    if x != None: \n",
     "        var_name = line.split(\"=\")[0].strip()\n",
     "        var_dec = line.split(\"=\")[1].strip()\n",
-    "        \n",
-    "        #print(var_name, var_dec)\n",
     "\n",
     "    return (var_name, var_dec)"
    ]
@@ -991,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1326,
+   "execution_count": 1391,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1023,7 @@
     }
    ],
    "source": [
-    "def extract_urls_from_line(line):\n",
+    "def extract_urls_from_line_docker(line):\n",
     "    # filter initial source code lines so only one with variables remains\n",
     "    x = re.search(\"(https?:\\/\\/(.)*)\", line)\n",
     "    \n",
@@ -1050,14 +1041,14 @@
     "\n",
     "    return (var_name, var_dec)\n",
     "\n",
-    "def find_external_services(program):\n",
+    "def find_external_services_docker(program):\n",
     "    lines = [line for line in program]\n",
     "    \n",
     "    services = []\n",
     "    for line in lines:\n",
     "        try:\n",
     "            # extract lines with urls\n",
-    "            services.append(extract_urls_from_line(line))\n",
+    "            services.append(extract_urls_from_line_docker(line))\n",
     "        except:\n",
     "            continue\n",
     "    \n",
@@ -1107,9 +1098,7 @@
     "    for line in code:\n",
     "        try:\n",
     "            for (k, v) in env_vars:\n",
-    "                #print(k, v)\n",
-    "                #print(line)\n",
-    "                \n",
+    "\n",
     "                if k in line[1]:\n",
     "                    tmp = line[1].replace(k, v, 1)\n",
     "                    tmp = tmp.strip().replace(\"'\", \"\")\n",
@@ -1128,12 +1117,12 @@
     "    print(\"Further interpreted\", len(interpreted), \"values in environment varaibles\")\n",
     "    return interpreted\n",
     "\n",
-    "def analyse_external_services(yml, handler):\n",
+    "def analyse_external_services_docker(yml, handler):\n",
     "    mod_program = get_program_text_with_env_docker(\n",
     "            yml, \n",
     "            handler)\n",
     "    \n",
-    "    services = find_external_services(mod_program)\n",
+    "    services = find_external_services_docker(mod_program)\n",
     "    \n",
     "    new_env_vars = interpret_service_strings_docker(services)\n",
     "    \n",
@@ -1142,7 +1131,7 @@
     "print()\n",
     "print(\"IOT-MQTT-INERCEPTOR\")\n",
     "print()\n",
-    "for (k,v) in analyse_external_services('iot-mqtt-interceptor/env_vars', \n",
+    "for (k,v) in analyse_external_services_docker('iot-mqtt-interceptor/env_vars', \n",
     "            'iot-mqtt-interceptor/app.py'):\n",
     "    print(k, v)\n",
     "\n",
